5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1593_820.log
== TEST (2019-03-28 11:25:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
x= valor//50

# Valor restante a ser sacado com notas menores que R$ 50
r= valor-(x*50)

# Quantidade de notas de R$ 10
y=r//10

r2=valor-((x*10)+(x*50))
z=r2/2

print(int(x)
print(int(y)
print(int(z)

-- ERROR:
File "XXXX", line 8
    x= valor//50
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:25:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
x= valor//50

# Valor restante a ser sacado com notas menores que R$ 50
r= valor-(x*50)

# Quantidade de notas de R$ 10
y=r//10

r2=valor-((x*10)+(x*50))
z=r2/2

print(int(x))
print(int(y))
print(int(z))

-- ERROR:
File "XXXX", line 8
    x= valor//50
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:26:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
x=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
r=valor-(x*50)

# Quantidade de notas de R$ 10
y=r//10

r2=valor-((x*10)+(x*50))
z=r2/2

print(int(x))
print(int(y))
print(int(z))

-- ERROR:
File "XXXX", line 8
    x=valor//50
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:26:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
r=valor-(x*50)

# Quantidade de notas de R$ 10
y=r//10

r2=valor-((x*10)+(x*50))
z=r2/2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
2
-186
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:27:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
r=valor-(x*50)

# Quantidade de notas de R$ 10
y=r//10

r2=valor-((x*10)+(x*50))
z=r2//2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
2
-186
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:29:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
r=valor-(x*50)

# Quantidade de notas de R$ 10
y=r//10

r2=valor-((y*10)+(x*50))
z=r2//2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:29:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
r=valor-(x*50)

# Quantidade de notas de R$ 10
y=r//10

r2=valor-((y*10)+(x*50))
z=r2//2

print(int(x))
print(int(y))
print(int(z))

-- EXECUTION TIME:
0.193909
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
